--- a/cssdemo.css
+++ b/cssdemo.css
@@ -6,7 +6,6 @@
 }
 
 body {
-  
   font-family: 'Courier New', Courier, monospace;
   background: linear-gradient(135deg, #ffe29f, #ffa99f);
   color: #222;
@@ -59,11 +58,14 @@ nav a:hover {
   background-color: #641b7b;
 }
 
-
+/* Main content area pushed to the right */
+main {
+  margin-left: 220px;
+  animation: fadeIn 1s ease-in;
+}
 
 section {
   background-color: rgba(255, 255, 255, 0.8);
-  
   margin: 1rem 0;
   padding: 1rem;
   border-radius: 12px;
@@ -119,9 +121,8 @@ img {
     justify-content: space-around;
     padding: 0.5rem 0;
   }
-}
-/* Main content area pushed to the right */
-main {
-  margin-left: 400;
-  animation: fadeIn 1s ease-in;
+
+  main {
+    margin-left: 0;
+  }
 }
