--- a/cssdemo.css
+++ b/cssdemo.css
@@ -27,7 +27,7 @@ header h1 {
 /* Custom Navigation - Vertical Sidebar */
 nav {
   position: fixed;
-  left: 0;
+  right: 0;
   top: 0;
   height: 100%;
   width: 200px;
