--- a/cssdemo.css
+++ b/cssdemo.css
@@ -28,8 +28,8 @@ header h1 {
 nav {
   position: fixed;
   right: 0;
-  top: 0;
-  height: 100%;
+  bottom: 0;
+  height: 200px;
   width: 200px;
   background-color: #3b0a45;
   color: white;
