--- a/cssdemo.css
+++ b/cssdemo.css
@@ -27,10 +27,10 @@ header h1 {
 /* Custom Navigation - Vertical Sidebar */
 nav {
   position: fixed;
-  right: 0;
-  bottom: 0;
-  height: 200px;
-  width: 200px;
+  left: 0;
+  top: 0;
+  height: 300px;
+  width: 300px;
   background-color: #3b0a45;
   color: white;
   padding-top: 2rem;
