--- a/cssdemo.css
+++ b/cssdemo.css
@@ -27,7 +27,10 @@ header h1 {
 /* Custom Navigation - Vertical Sidebar */
 nav {
   position: fixed;
-
+  left: 0;
+  top: 0;
+  height: 300px;
+  width: 300px;
   background-color: #3b0a45;
   color: white;
   padding-top: 2rem;
