--- a/cssdemo.css
+++ b/cssdemo.css
@@ -27,9 +27,9 @@ header h1 {
 /* Custom Navigation - Vertical Sidebar */
 nav {
   position: fixed;
-  top: 0;
-  left: 0;
-  height: 250px;
+  right: 0;
+  bottom:  0;
+  height: 350px;
   width: 250px;
   background-color: #3b0a45;
   color: white;
